--- a/SSISEncodeFileTask/SSISEncodeFileTask.csproj
+++ b/SSISEncodeFileTask/SSISEncodeFileTask.csproj
@@ -64,7 +64,7 @@
     <Compile Include="frmEditProperties.Designer.cs">
       <DependentUpon>frmEditProperties.cs</DependentUpon>
     </Compile>
-    <Compile Include="NamedItems.cs" />
+    <Compile Include="Keys.cs" />
     <Compile Include="Objects.cs" />
     <Compile Include="SSISEncodeFileTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,7 +86,7 @@
     <PostBuildEvent>path "C:\Program Files\Microsoft SDKs\Windows\v6.0A\bin"
 gacutil /uf "SSISEncodeFileTask100"
 del "C:\Program Files (x86)\Microsoft SQL Server\100\DTS\Tasks\SSISEncodeFileTask100.dll"
-copy "C:\VM-TFS\CodePlex\SSISEncodeFileTask\SSISEncodeFileTask\bin\Debug\SSISEncodeFileTask100.dll" "C:\Program Files (x86)\Microsoft SQL Server\100\DTS\Tasks\"
+copy "$(TargetDir)SSISEncodeFileTask100.dll" "C:\Program Files (x86)\Microsoft SQL Server\100\DTS\Tasks\"
 gacutil -i "$(TargetDir)SSISEncodeFileTask100.dll"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
