--- a/SSISEncodeFileTask/SSISEncodeFileTask.csproj
+++ b/SSISEncodeFileTask/SSISEncodeFileTask.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
   </ItemGroup>
